	
Students: fixed icon error in Summary page
	Edited file /modules/Students/student_view_details.php

Individual Needs: minor changes to interface language and field order
	Edited file /modules/Individual Needs/in_edit.php
	Edited file /modules/Students/student_view_details.php

Planner: added new feature to allow weekly email update to parents, giving details of homework and behaviour
	New folder /cli
	New file /cli/planner_parentWeeklyEmailSummary.php

General: added Italian language support, with partially complete translation
	New value in table gibboni18n
	New folder /i18n/it_IT

v8.0.06
-------
User Admin: added size checking to image upload in user add and edit
	Edited files /modules/User Admin/user_manage_add*.php, user_manage_edit*.php

Staff: fixed issue preventing staff image showing up in brief profile
	Edited file /modules/Staff/staff_view_details.php

Planner: fixed transparent block issue for smart blocks and outcomes
	Edited file /modules/Planner/moduleFunctions.php, planner_view_full.php
	Edited file /themes/Default/img/plus.png
	
Finance: fixed transparent block issue for invoice fee blocks
	Edited file /modules/Finance/moduleFunctions.php

User Admin: fixed Student Enrolment search bug, which causes loss of school year choice
	Edited file /modules/User Admin/studentEnrolment_manage.php

v8.0.05
-------
General: added high quality favicon
	Edited file /favicon.ico

Markbook: added whole-class Markbook export
	Edited file /modules/Markbook/markbook_view.php
	New files /modules/Markbook/markbook_viewExportAll*.php

Attendance: added ability to set future absences across multiple days
	Edited files /modules/Attendance/attendance_future_byPerson*.php

Attendance: added ability to remove future absence records
	Edited files /modules/Attendance/attendance_future_byPerson
	New file /modules/Attendance/attendance_future_byPersonDeleteProcess.php

User Admin: fixed permission loss error in Manage Permissions